--- a/docker/DockerFile
+++ b/docker/DockerFile
@@ -56,5 +56,10 @@ RUN set -x && \
 RUN set -x && \
     pip3 install streamlit
 
+# install Flask
+RUN set -x && \
+    pip3 install Flask && \
+    pip3 install flask-cors
+
 # start bash
 CMD [ '/bin/bash'  ]
